# mechanisms

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: CNAME  bibliography.html  catalog.html  connections.html  demos.html  implementations.html  index.html  map.html  papers.html  scoring-rules-as-market-making.html  style.css  world-cup.html
examples/: _viz.py  pdlp_demo.py  quickstart.py  sim_aggregation.py  sim_amm.py  sim_calibration.py  sim_cda.py  sim_cmm.py  sim_combinatorial.py  sim_correlated_agreement.py  sim_decision_market.py  sim_fba.py  sim_hybrid_market.py  sim_lmsr.py  sim_local_scoring.py  sim_parimutuel.py  sim_peer_prediction.py  sim_perp.py  sim_pipeline.py  sim_pm_amm.py  sim_scoring_rules.py
mechanisms/: __init__.py  aggregation.py  amm.py  calibration.py  cda.py  cmm.py  combinatorial.py  decision_market.py  fba.py  hybrid_market.py  kelly.py  lmsr.py  local_scoring.py  nearest_the_pin.py  parimutuel.py  pdlp.py  peer_prediction.py  perp.py  pm_amm.py  scoring_rules.py
papers/: README.md  nearest-the-pin-parimutuel.md
research/: README.md  anisotropic-sliced-scores.md  bibliography.bib  composing-mechanisms-conservation-and-boosting.md  composition-and-the-algebra-of-mechanisms.md  gaps-and-roadmap.md  local-score-wagering-pool.md  market-scoring-rules-and-amms.md  parimutuel-and-scoring-rules.md  perpetual-demand-lending-pools.md  perps-cda-monteprediction.md  scoring-rules-as-market-making.md  survey-prediction-aggregation.md
scripts/: README.md  bibtools.py  build_bibliography.py  check_bib_html_sync.py  check_citations.py
(+32 files in other folders)
