[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanisms"
version = "0.1.0"
description = "Reference implementations of market mechanisms: parimutuels, market scoring rules, AMMs, perpetuals, and the tooling around them."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Cotton" }]
keywords = [
    "market-mechanisms",
    "prediction-markets",
    "parimutuel",
    "market-scoring-rules",
    "lmsr",
    "automated-market-maker",
    "amm",
    "perpetual-futures",
    "scoring-rules",
    "information-aggregation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://mechanisms.microprediction.org"
Repository = "https://github.com/microprediction/mechanisms"

[tool.setuptools.packages.find]
where = ["."]
include = ["mechanisms*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
